syntax = "proto3";

package weather;

option go_package = "weatherpb";

message Weather{
    double temperature = 1;
    double temperature_min = 2;
    double temperature_max = 3;
    string description = 4;
    string country = 5;
    bool found = 6;
}

message WeatherRequest{
    string location = 1;
}

message WeatherResponse{
    Weather weather = 1;
}

service WeatherService{
    rpc WeatherDetails (WeatherRequest) returns (WeatherResponse);
}
